<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenus"
        android:textSize="20sp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openTvButton"
        android:text="@string/v1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openCheckBox"
        android:text="@string/v2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openRadioButton"
        android:text="@string/v3" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openIV"
        android:text="@string/v4" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openSpinner"
        android:text="@string/v5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openRB"
        android:text="@string/v6" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDTPicker"
        android:text="@string/v7" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openWebView"
        android:text="@string/v8" />

</LinearLayout>
