<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloProjeto"
        android:textSize="30sp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openFL"
        android:text="@string/b1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openLL"
        android:text="@string/b2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openRL"
        android:text="@string/b3" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDL"
        android:text="@string/b4" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openViews"
        android:text="@string/b5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openMenus"
        android:text="@string/b6" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDialogs"
        android:text="@string/b7" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openListView"
        android:text="@string/b8" />

</LinearLayout>
